# MatMLA_vs_NestedGQA

./: .gitignore  AGENTS.md  README.md  evaluate.py  hydralvlm.txt  loss.py  matmla_cache.py  pyproject.toml  train.py
configs/: base_gqa.yaml  base_mha.yaml  gqa_moe_nested.yaml  matmla.yaml  nested_gqa.yaml  smoke_real.yaml
data/: wikitext.py
model/: backbone.py  baseline.py  common.py  factory.py  gqa_moe_nested.py  matmla.py  nested_gqa.py
old_migration_info/: MatMLA_Compressed KV Cache Flow.md  attention_moe.txt
slurm/: README.md  eval.sh  run.sh  run_debug_smoke.sh
utils/: config.py  init.py  logging.py  schedule.py
